--- a/templates/index.html
+++ b/templates/index.html
@@ -51,14 +51,14 @@
                     <div class="card mx-5">
                         <a href="/latin_inscription"><img src="/static/dura-fX2_01.png" class="card-img-top" alt="object1"></a>
                         <div class="card-body">
-                        <h5 class="card-title">Latin Inscription</h5>
+                        <h5 class="card-title">Latin Inscription from the Praetorium at Dura</h5>
                         <a href="/latin_inscription" class="btn btn-primary stretched-link">Learn More</a>
                         </div>
                     </div>
                     <div class="card mx-5">
                         <a href="/arsu_relief"><img src="/static/dura-fX2_01.png" class="card-img-top" alt="object2"></a>
                         <div class="card-body">
-                        <h5 class="card-title">Arsu Relief</h5>
+                        <h5 class="card-title">Relief of Arsu</h5>
                         <a href="/arsu_relief" class="btn btn-primary stretched-link">Learn More</a>
                         </div>
                     </div>
@@ -67,14 +67,14 @@
                     <div class="card mx-5">
                         <a href="/gad_relief"><img src="/static/dura-fX2_01.png" class="card-img-top" alt="object3"></a>
                         <div class="card-body">
-                        <h5 class="card-title">Gad Relief</h5>
+                        <h5 class="card-title">Cult relief of the Gad (Fortune) of Dura, from the Temple of the Gadde</h5>
                         <a href="/gad_relief" class="btn btn-primary stretched-link">Learn More</a>
                         </div>
                     </div>
                     <div class="card mx-5">
                         <a href="/julius_terentius"><img src="/static/dura-fX2_01.png" class="card-img-top" alt="object4"></a>
                         <div class="card-body">
-                        <h5 class="card-title">Julius Terentius</h5>
+                        <h5 class="card-title">Julius Terentius Performing a Sacrifice</h5>
                         <a href="/julius_terentius" class="btn btn-primary stretched-link">Learn More</a>
                         </div>
                     </div>
@@ -83,14 +83,14 @@
                         <div class="card mx-5">
                             <a href="/votive_relief"><img src="/static/dura-fX2_01.png" class="card-img-top" alt="object3"></a>
                             <div class="card-body">
-                            <h5 class="card-title">Votive Relief</h5>
+                            <h5 class="card-title">Votive Relief of the Goddess Nemesis</h5>
                             <a href="/votive_relief" class="btn btn-primary stretched-link">Learn More</a>
                             </div>
                         </div>
                         <div class="card mx-5">
                             <a href="/mithras_relief"><img src="/static/dura-fX2_01.png" class="card-img-top" alt="object4"></a>
                             <div class="card-body">
-                            <h5 class="card-title">Mithras Relief</h5>
+                            <h5 class="card-title">Cult Relief of Mithras Slaying the Bull (Tauroctony)</h5>
                             <a href="/mithras_relief" class="btn btn-primary stretched-link">Learn More</a>
                             </div>
                         </div>
